fix tab alignment

--- a/frontend/src/toolbar/styles.scss
+++ b/frontend/src/toolbar/styles.scss
@@ -142,3 +142,8 @@
     color: hsla(220, 15%, 49%, 1);
     margin-bottom: 10px;
 }
+
+.ant-tabs > .ant-tabs-nav .ant-tabs-nav-wrap,
+.ant-tabs > div > .ant-tabs-nav .ant-tabs-nav-wrap {
+    justify-content: center;
+}
